add some initialization rules